# fde_robotic_automation

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  packages.csv  pyproject.toml  script.py
requirements/: base.txt  dev.txt
tests/: test_script.py
